buildscript {
    repositories {
        google()
        mavenCentral()
    }
    dependencies {
        classpath 'com.android.tools.build:gradle:7.4.2'
    }
}

allprojects {

    ext {
        appName = 'Custom Pixel Dungeon'
        appPackageName = 'com.qsr.customspd'

        appVersionCode = 10
        appVersionName = '2.1.0-1.0'

        appJavaCompatibility = JavaVersion.VERSION_1_8

        appAndroidCompileSDK = 33
        appAndroidMinSDK = 19
        appAndroidTargetSDK = 33

        gdxVersion = '1.11.0'
        gdxControllersVersion = '2.2.3'
        robovmVersion = '2.3.19'
    }
    version = appVersionName

    repositories {
        google()
        mavenCentral()
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    }

}

// Constrain the Java 8 modules to the Java 8 *API*, not just the Java 8 language level.
//
// sourceCompatibility/targetCompatibility emit -source 8 -target 8, which restrict syntax
// only. With no bootclasspath, javac 17 still resolves java.base@17 symbols and stamps them
// into Java 8 bytecode -- so a Java 9+ API call compiles clean and then NoSuchMethodError at
// runtime. That is not hypothetical here: BundleBridge used java.util.List.of (Android API 34)
// on a minSdk 19 app with no core library desugaring configured.
//
// options.release swaps in the JDK's ct.sym Java 8 API signature data and makes those
// references a compile error instead.
//
// Applied only where sourceCompatibility is actually 1.8, so services/tools/* (which have no
// explicit level and use records, switch expressions and text blocks on the Gradle JVM) are
// untouched. Excluded on :android, where --release conflicts with AGP's android.jar
// bootclasspath -- Android Lint's NewApi is the correct guard there, and it also covers Kotlin,
// which has no --release equivalent.
// NB: this must run in afterEvaluate. Reading sourceCompatibility inside a bare
// configureEach resolves it before the subproject's own build.gradle has set it, so the
// comparison sees the Gradle JVM default (17), silently skips every module, and leaves you
// with a green build and no gate at all.
subprojects {
    afterEvaluate { proj ->
        if (proj.name == 'android' || !proj.plugins.hasPlugin('java')) return
        if (proj.java.sourceCompatibility != JavaVersion.VERSION_1_8) return
        proj.tasks.withType(JavaCompile).configureEach {
            options.release = 8
        }
    }
}

// Force the api-diff subproject to configure itself (applying the 'java'
// plugin and populating sourceSets) before the root project finishes
// evaluating, since the apiDiff task below reads its runtime classpath.
evaluationDependsOn(':services:tools:api-diff')

task apiDiff(type: JavaExec) {
    group = 'verification'
    description = 'Run API-diff auditor against a range (--args="--base <ref> --head <ref>")'
    dependsOn ':services:tools:api-diff:compileJava'
    classpath = project(':services:tools:api-diff').sourceSets.main.runtimeClasspath
    mainClass = 'com.qsr.customspd.tools.apidiff.ApiDiffCli'
}

// Force the pack-smoke subproject to configure itself (applying the 'java'
// plugin and populating sourceSets) before the root project finishes
// evaluating, since the packSmoke task below reads its runtime classpath.
evaluationDependsOn(':services:tools:pack-smoke')

task packSmoke(type: JavaExec) {
    group = 'verification'
    description = 'Run pack boot-smoke harness against marketplace/'
    dependsOn ':services:tools:pack-smoke:compileJava'
    classpath = project(':services:tools:pack-smoke').sourceSets.main.runtimeClasspath
    mainClass = 'com.qsr.customspd.tools.packsmoke.PackSmokeCli'
}